SET(KAZMATHXX_HEADERS
mat4.h
vec4.h
vec3.h
vec2.h
)

SET(KAZMATHXX_SRCS
vec3.cxx
vec2.cxx
)

INCLUDE_DIRECTORIES(.)

ADD_LIBRARY(Kazmathxx SHARED ${KAZMATHXX_SRCS})
SET_TARGET_PROPERTIES(Kazmathxx PROPERTIES COMPILE_FLAGS "-D__CPLUSPLUS")

# Install libSLmath to the lib directory
INSTALL(TARGETS Kazmathxx LIBRARY DESTINATION lib)
INSTALL(FILES ${KAZMATHXX_HEADERS} DESTINATION include/kazmathxx)
